--- a/package.json
+++ b/package.json
@@ -4,17 +4,32 @@
   "description": "a react css spinners demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint '**/*.js'",
+    "lint:fix": "prettier-eslint '**/*.js --write'"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lidongdong64/react-css-spinners-demo.git"
   },
-  "keywords": ["react", "css", "spinners "],
+  "keywords": [
+    "react",
+    "css",
+    "spinners "
+  ],
   "author": "lidongdong64",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lidongdong64/react-css-spinners-demo/issues"
   },
-  "homepage": "https://github.com/lidongdong64/react-css-spinners-demo#readme"
+  "homepage": "https://github.com/lidongdong64/react-css-spinners-demo#readme",
+  "devDependencies": {
+    "eslint": "^5.12.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "prettier-eslint": "^8.8.2",
+    "prettier-eslint-cli": "^4.7.1"
+  }
 }
