--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "a react css spinners demo",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint '**/*.js'",
-    "lint:fix": "prettier-eslint '**/*.js --write'"
+    "lint": "eslint **/*.js",
+    "lint:fix": "prettier-eslint **/*.js --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": ["npm run lint:fix", "git add"]
   },
   "repository": {
     "type": "git",
@@ -29,6 +37,8 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1"
   }
